# Growen

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MARKET_SCHEDULER_IMPLEMENTATION_SUMMARY.md  MARKET_SCHEDULER_QUICKSTART.md  Makefile  README.md  Roadmap.md  alembic.ini  analyze_discovery_logs.py  check_chat_messages.py  check_kawsay.py  check_market_tables.py  debug_discovery_filters.py  debug_rank.py  docker-compose.yml  ensure_out_entry.py  fix_deps.bat  inspect_db.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements-ml.txt  requirements-pdf.txt  requirements-worker.txt  requirements.txt  start.bat  start.bat - Acceso directo.lnk  start.ps1  start.sh  stop.bat  stop.ps1  test_discover_improved.py  test_discovery_debug.py  (+9 more)
.cursor/: check_sessions.py
.github/: dependabot.yml
Conocimientos/: .gitkeep
PR/: PR_mejoras_import_ai_confianza_metricas.md
adapters/: __init__.py
agent_core/: __init__.py  bus.py  config.py  db.py  detect_mcp_url.py  models.py  nlu.py  rules_engine.py  scheduler.py  settings.py
ai/: __init__.py  embeddings.py  intent_classifier.py  logging_setup.py  persona.py  policy.py  provider_base.py  router.py  types.py
cli/: __init__.py  ng.py
data/: README.md
db/: __init__.py  base.py  models.py  session.py  sku_generator.py  sku_utils.py  text_utils.py
docs/: API_MARKET.md  API_PRODUCTS.md  BACKUPS.md  BUG_REPORTS.md  CANONICAL_SKU.md  CATALOGS_OPERATIONS.md  CATEGORIES.md  CHAT.md  CHATBOT_ARCHITECTURE.md  CHAT_PERSONA.md  CHAT_PRICE_TODOS.md  DB_CONFIGURATION.md  DEPLOYMENT_MARKET_ALERTS.md  DEVELOPMENT_WORKFLOW.md  DRIVE_SYNC_DRAMATIQ.md  ENRICHMENT_LOGS.md  FEATURES_PENDIENTES.md  FRONTEND_DEBUG.md  GOOGLE_DRIVE_QUICKSTART.md  GOOGLE_DRIVE_SETUP.md  GOOGLE_DRIVE_SYNC.md  IMAGES.md  IMAGES_STEP2.md  IMPORT_EMAIL.md  IMPORT_PDF.md  IMPORT_PDF_AI_NOTES.md  INSTALL_PDF_TOOLS.md  JOBS_TNUBE.md  KNOWLEDGE_BASE.md  KNOWN_ERRORS.md  MARKET_ALERTS.md  MARKET_ALERTS_QUICK_START.md  MARKET_ANALYSIS_FIX.md  MARKET_AUTO_DISCOVERY.md  MARKET_DISCOVERY_COMPLETE.md  MARKET_QUERY_OPTIMIZATION.md  MARKET_SCHEDULER.md  MARKET_UNIT_TESTS.md  MCP.md  MCP_DIAGNOSTICS.md  (+29 more)
frontend/: .dockerignore  .env.development  .env.example  index.html  package-lock.json  package.json  test_output.txt  tsconfig.json  vite.config.mjs  vite.config.ts  vitest.config.ts  vitest.setup.ts
infra/: Dockerfile.api  Dockerfile.dramatiq  Dockerfile.frontend  Dockerfile.postgres  alembic.ini  wait-for.sh
mcp_servers/: __init__.py
scripts/: DockerPromp001.ps1  archive_old_chat_sessions.py  audit_schema.py  auto_link_orphan_products.py  check_admin_user.py  check_all_fer_products.py  check_chat_history.py  check_fer_0018_detailed.py  check_generate_webp_endpoint.py  check_image_43.py  check_image_versions_43.py  check_pdf_crypto.py  check_product_19_sku.py  check_product_43.py  check_product_43_images.py  check_product_43_sku.py  check_product_53_images.py  check_product_83.py  check_product_sku.py  check_schema.py  check_sku_fer_0018.py  clean_all_logs.ps1  (+80 more)
(+513 files in other folders)
