[project]
name = "growen"
version = "0.1.0"
description = "Agente para gestión de catálogo y stock de Nice Grow"
authors = [{name = "Growen"}]
requires-python = ">=3.11"
readme = "README.md"

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = {version = "^0.30.1", extras = ["standard"]}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg = {version = "^3.1.18", extras = ["binary"]}
pydantic-settings = "^2.2.1"
typer = "^0.12.3"
websockets = "^12.0"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.2",
    "black>=24.3.0",
    "pytest>=8.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
