[project]
name = "growen"
version = "0.1.0"
description = "Agente para gestión de catálogo y stock de Nice Grow"
authors = [{name = "Growen"}]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "pydantic-settings>=2.2.1",
    "typer>=0.12.3",
    "websockets>=12.0",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.2",
    "black>=24.3.0",
    "pytest>=8.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai", "db", "cli", "data", "infra", "config", "alembic", "adapters", "frontend", "services", "agent_core"]
