[project]
name = "growen"
version = "0.2.0"
description = "Agente para gestión de catálogo y stock de Nice Grow"
authors = [{name = "Growen"}]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "pydantic-settings>=2.2.1",
    "typer>=0.12.3",
    "websockets>=12.0",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "httpx>=0.27,<0.28",
    "python-multipart>=0.0.9",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
    "python-magic>=0.4.27; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
    "slowapi>=0.1.9",
    "rapidfuzz>=3.9.0",
    "aiosqlite>=0.20.0",
    # PDF generation (optional, fallback handled at runtime)
    "weasyprint>=62.0; platform_system != 'Windows'",  # Windows requiere dependencias GTK; opcional
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.2",
    "black>=24.3.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai", "db", "cli", "data", "infra", "config", "alembic", "adapters", "frontend", "services", "agent_core"]
